# Testing_de_software_tp3_Jesus_Gonzales

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  makefile  project.yml
inc/: entradas_salidas.h  main.h
inc/pico/: stdlib.h
src/: entradas_salidas.c  main.c
test/: test_entradas_salidas.c  test_leds.c
